# energy-demand-forecasting-mlops

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/energy-demand-forecasting-mlops/api/: main.py
